Criação de tabela curso. Criação de CRUD curso. Inclusão de documentação para acesso as operações do CRUD curso no Swagger.json
