# src/server.ts
@@ -5,6 +5,7 @@ import cors from 'cors'
 
 import coordenadorRouter from './routes/coordenador'
 import livroRouter from './routes/livro'
+import cursoRouter from './routes/curso'
 
 const app = express()
 
@@ -16,6 +17,7 @@ app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocs))
 
 app.use('/v1/coordenadores', coordenadorRouter)
 app.use('/v1/livros', livroRouter)
+app.use('/v1/cursos', cursoRouter)
 
 app.get('/', (request, response) => {
    return response.send("Teste de integridade")
